examples/expected/check_invalid_match_guard.txt
error[E2001]: type mismatch: expected Bool, got I64
  --> examples/invalid_match_guard.tp:4:10
   |
 4 |     1 if 2 => print("ok"),
   |          ^
